--- a/page2548109.html
+++ b/page2548109.html
@@ -478,7 +478,9 @@
     <div id="rec51068998" class="r t-rec t-rec_pb_45" style="padding-bottom:45px;background-color:#0a2546; " data-record-type="210" data-bg-color="#0a2546">
       <!-- T186 -->
       <div class="t186">
-        <form id="form51068998" name='form51068998' role="form" action='https://forms.tildacdn.com/procces/' onsubmit="return Sitetest()" method='POST' data-formactiontype="2" data-inputbox=".t186__blockinput" data-success-url="https://cesar231.typeform.com/to/OUhTyf" class="js-form-proccess "
+        <!-- <form id="form51068998" name='form51068998' role="form" action='https://forms.tildacdn.com/procces/' method='POST' data-formactiontype="2" data-inputbox=".t186__blockinput" data-success-url="https://cesar231.typeform.com/to/OUhTyf" class="js-form-proccess "
+          data-tilda-captchakey=""> <input type="hidden" name="formservices[]" value="bad0f615a8e7efab7b67d63bcb869c96" class="js-formaction-services"> <input type="hidden" name="formservices[]" value="c7f631785b78197d3d225dae106dc685" class="js-formaction-services"> -->
+        <form id="form51068998" name='form51068998' role="form" action='' method='POST' data-formactiontype="2" data-inputbox=".t186__blockinput" data-success-url="" class="js-form-proccess "
           data-tilda-captchakey=""> <input type="hidden" name="formservices[]" value="bad0f615a8e7efab7b67d63bcb869c96" class="js-formaction-services"> <input type="hidden" name="formservices[]" value="c7f631785b78197d3d225dae106dc685" class="js-formaction-services">
           <div class="t-container">
             <div class="t-col t-col_6 t-prefix_1">
@@ -531,10 +533,6 @@
       </style>
       <!--[if IE 8 ]><style> .t-input-block .t-input:focus ~ .t-input__vis-ph, .t-input_has-content + .t-input__vis-ph { top: 10px; font-size: 12px; }</style><![endif]-->
       <script>
-        function Sitetest (){
-          console.log("Custom function worked!");
-          return false;
-        };
 
         function t_animateInputs(recid) {
           var el = $('#rec' + recid);
