Updated main form - Main form input field - Main form button

--- a/page3133513.html
+++ b/page3133513.html
@@ -367,12 +367,12 @@
           <div class='t396__elem tn-elem tn-elem__591795941530803082094' data-elem-id='1530803082094' data-elem-type='button' data-field-top-value="647" data-field-top-res-960-value="647" data-field-top-res-320-value="417" data-field-left-value="380"
             data-field-left-res-960-value="370" data-field-left-res-320-value="10" data-field-height-value="55" data-field-height-res-320-value="55" data-field-width-value="200" data-field-width-res-320-value="300" data-field-axisy-value="top" data-field-axisx-value="left"
             data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-            <div class='tn-atom'>Join the waiting list</div>
+            <button type="submit" class='tn-atom main-form-button'>Join the waiting list</button>
           </div>
           <div class='t396__elem tn-elem tn-elem__591795941530803146363' data-elem-id='1530803146363' data-elem-type='text' data-field-top-value="661" data-field-top-res-960-value="661" data-field-top-res-320-value="341" data-field-left-value="20" data-field-left-res-960-value="10"
             data-field-left-res-320-value="10" data-field-width-value="290" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value=""
             data-field-widthunits-value="">
-            <div class='tn-atom' field='tn_text_1530803146363'>Your email<br></div>
+            <input type="text" placeholder="Your email" class='tn-atom main-form' field='tn_text_1530803146363'></input>
           </div>
           <div class='t396__elem tn-elem tn-elem__591795941530803210771' data-elem-id='1530803210771' data-elem-type='shape' data-field-top-value="701" data-field-top-res-960-value="701" data-field-top-res-320-value="381" data-field-left-value="21" data-field-left-res-960-value="11"
             data-field-left-res-320-value="11" data-field-height-value="1" data-field-width-value="301" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value=""
