Bottom form -Tilda

--- a/page3133513.html
+++ b/page3133513.html
@@ -1697,11 +1697,11 @@
           <div class='t396__elem tn-elem tn-elem__592256571530803082094' data-elem-id='1530803082094' data-elem-type='button' data-field-top-value="120" data-field-top-res-320-value="320" data-field-left-value="980" data-field-left-res-320-value="10"
             data-field-height-value="55" data-field-height-res-320-value="55" data-field-width-value="200" data-field-width-res-320-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value=""
             data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-            <div class='tn-atom'>Join the waiting list</div>
+            <button type="submit" class='tn-atom main-form-button'>Join the waiting list</button>
           </div>
           <div class='t396__elem tn-elem tn-elem__592256571530803146363' data-elem-id='1530803146363' data-elem-type='text' data-field-top-value="134" data-field-top-res-320-value="244" data-field-left-value="620" data-field-left-res-320-value="10" data-field-width-value="290"
             data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-            <div class='tn-atom' field='tn_text_1530803146363'>Your email<br></div>
+            <input type="text" placeholder="Your email" class='tn-atom main-form' field='tn_text_1530803146363'></input>
           </div>
           <div class='t396__elem tn-elem tn-elem__592256571530803210771' data-elem-id='1530803210771' data-elem-type='shape' data-field-top-value="174" data-field-top-res-320-value="284" data-field-left-value="621" data-field-left-res-320-value="11" data-field-height-value="1"
             data-field-width-value="301" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
@@ -1795,16 +1795,6 @@
     </div>
   </div>
   <!--/allrecords-->
-  <!-- Tilda copyright. Don't remove this line -->
-  <div class="t-tildalabel " id="tildacopy" data-tilda-sign="600271#3133513">
-    <a href="https://tilda.cc/?upm=600271" class="t-tildalabel__link">
-      <div class="t-tildalabel__wrapper">
-        <div class="t-tildalabel__txtleft">Made on </div>
-        <div class="t-tildalabel__wrapimg"><img src="images/tildacopy.png" class="t-tildalabel__img"></div>
-        <div class="t-tildalabel__txtright">Tilda</div>
-      </div>
-    </a>
-  </div>
   <!-- Stat -->
   <script type="text/javascript">
     (function(i, s, o, g, r, a, m) {
