--- a/page3133513.html
+++ b/page3133513.html
@@ -371,14 +371,14 @@
             data-field-left-res-960-value="370" data-field-left-res-320-value="10" data-field-height-value="55" data-field-height-res-320-value="55" data-field-width-value="200" data-field-width-res-320-value="300" data-field-axisy-value="top" data-field-axisx-value="left"
             data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
 
-            <button type="submit" onclick="validateCustomForm(document.getElementById('formValueId').value);" class='tn-atom main-form-button'>Join the waiting list</button>
+            <button type="submit" onclick="validateCustomForm(document.getElementById('formValueId1').value);" class='tn-atom main-form-button'>Join the waiting list</button>
 
           </div>
           <div class='t396__elem tn-elem tn-elem__591795941530803146363' id="main-form-element-2" data-elem-id='1530803146363' data-elem-type='text' data-field-top-value="661" data-field-top-res-960-value="661" data-field-top-res-320-value="341" data-field-left-value="20" data-field-left-res-960-value="10"
             data-field-left-res-320-value="10" data-field-width-value="290" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value=""
             data-field-widthunits-value="">
 
-            <input type="text" id="formValueId" placeholder="Your email" class='tn-atom main-form' field='tn_text_1530803146363' required></input>
+            <input type="text" id="formValueId1" placeholder="Your email" class='tn-atom main-form' field='tn_text_1530803146363' required></input>
 
           </div>
           <div  class='t396__elem tn-elem tn-elem__591795941530803210771' data-elem-id='1530803210771' data-elem-type='shape' data-field-top-value="701" data-field-top-res-960-value="701" data-field-top-res-320-value="381" data-field-left-value="21" data-field-left-res-960-value="11"
@@ -1704,11 +1704,11 @@
           <div class='t396__elem tn-elem tn-elem__592256571530803082094' data-elem-id='1530803082094' data-elem-type='button' data-field-top-value="120" data-field-top-res-320-value="320" data-field-left-value="980" data-field-left-res-320-value="10"
             data-field-height-value="55" data-field-height-res-320-value="55" data-field-width-value="200" data-field-width-res-320-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value=""
             data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-            <button type="submit" class='tn-atom main-form-button'>Join the waiting list</button>
+            <button type="submit" onclick="validateCustomForm(document.getElementById('formValueId2').value);" class='tn-atom main-form-button'>Join the waiting list</button>
           </div>
           <div class='t396__elem tn-elem tn-elem__592256571530803146363' data-elem-id='1530803146363' data-elem-type='text' data-field-top-value="134" data-field-top-res-320-value="244" data-field-left-value="620" data-field-left-res-320-value="10" data-field-width-value="290"
             data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-            <input type="text" placeholder="Your email" class='tn-atom main-form' field='tn_text_1530803146363'></input>
+            <input type="text" id="formValueId2" placeholder="Your email" class='tn-atom main-form' field='tn_text_1530803146363'></input>
           </div>
           <div class='t396__elem tn-elem tn-elem__592256571530803210771' data-elem-id='1530803210771' data-elem-type='shape' data-field-top-value="174" data-field-top-res-320-value="284" data-field-left-value="621" data-field-left-res-320-value="11" data-field-height-value="1"
             data-field-width-value="301" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
