--- a/page3133513.html
+++ b/page3133513.html
@@ -14,7 +14,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="canonical" href="http://joinlucid.com/new-design">
-  <link rel="shortcut icon" href="images/tild3536-3230-4136-b535-306439323765__favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/Lucid-favicon.ico" type="image/x-icon" />
   <!-- Assets -->
   <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="css/tilda-blocks-2.12.css?t=1530870807" type="text/css" media="all" />
