--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blank page</title>
   <meta property="og:url" content="http://joinlucid.com/new-design" />
-  <meta property="og:title" content="Blank page" />
+  <meta property="og:title" content="Lucid - No more back and forth." />
   <meta property="og:description" content="" />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="257953674358265" />
