--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <script src="js/tilda-slds-1.4.min.js"></script>
   <script src="js/hammer.min.js"></script>
   <script src="js/tilda-zoom-2.0.min.js"></script>
-  <script src="js/custom-Form.js"></script>
+  <script src="js/custom-form.js"></script>
   <!-- Facebook Pixel Code -->
   <script>
     ! function(f, b, e, v, n, t, s) {
